--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
-    "gatsby": "^2.13.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
+    "gatsby": "^2.13.15",
+    "gatsby-image": "^2.2.5",
+    "gatsby-plugin-sass": "^2.1.1",
+    "gatsby-plugin-sharp": "^2.2.4",
+    "gatsby-source-wordpress": "^3.1.6",
+    "gatsby-transformer-sharp": "^2.2.2",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
