--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.15",
     "gatsby-image": "^2.2.5",
     "gatsby-plugin-sass": "^2.1.1",
     "gatsby-plugin-sharp": "^2.2.4",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-source-wordpress": "^3.1.6",
     "gatsby-transformer-sharp": "^2.2.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
