--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^1.5.8",
     "gatsby": "^2.13.15",
     "gatsby-image": "^2.2.5",
+    "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.1",
     "gatsby-plugin-sharp": "^2.2.4",
     "gatsby-plugin-styled-components": "^3.1.2",
@@ -31,6 +32,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
     "styled-components": "^4.3.2",
     "yup": "^0.27.0"
