--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^1.5.8",
     "gatsby": "^2.17.15",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-manifest": "^2.2.28",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-sharp": "^2.3.0",
